# FEVERDREAM

./: .gitignore  README.md  build.gradle.kts  matrix-kmp.json  settings.gradle.kts  vodozemac-integration.json  vodozemac-releases.json  vodozemac-repo.json
.github/: copilot-instructions.md
crypto_store/: matrix-sdk-crypto.sqlite3-shm  matrix-sdk-crypto.sqlite3-wal
kotlin-bindings/org/matrix/rustcomponents/sdk/crypto/: matrix_sdk_crypto_ffi.kt
rust-core/: Cargo.toml  uniffi.toml
rust-core/src/: lib.rs
src/desktopMain/kotlin/: Main.kt  TestVodozemac.kt
src/desktopMain/kotlin/crypto/: CryptoInitializer.kt  CryptoManager.kt  KeyBackupManager.kt  KeyManager.kt  MessageCacheManager.kt  OlmMachineManager.kt  RoomEncryptionManager.kt  RoomKeyManager.kt  SyncManager.kt
src/desktopMain/kotlin/models/: Models.kt
src/desktopMain/kotlin/network/: AuthApi.kt  DeviceApi.kt  GlobalState.kt  MatrixApi.kt  MessageApi.kt  NetworkClient.kt  RoomApi.kt  SessionManager.kt
src/desktopMain/kotlin/org/matrix/rustcomponents/sdk/crypto/: matrix_sdk_crypto_ffi.kt
src/desktopMain/kotlin/ui/: ChatComponents.kt  ChatHooks.kt  ChatScreen.kt  ChatWindow.kt  LoginScreen.kt  RoomsScreen.kt  SettingsScreen.kt  UIComponents.kt  WindowManager.kt
src/desktopMain/kotlin/uniffi/matrix_sdk_common/: matrix_sdk_common.kt
